openshift/kustomize-iag/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iag
  labels:
    app: iag
    name: iag
spec:
  ports:
  - name: iag
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    name: iag
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
status:
  loadBalancer: {}
